fix: schedule text-alignment

--- a/styles/schedule.module.css
+++ b/styles/schedule.module.css
@@ -55,9 +55,24 @@
 }
 .time {
   color: var(--primary);
-  margin-right: 15px;
+  width: 78px;
+}
+.schedule_p1 {
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
+@media screen and (max-width: 767px) {
+  .schedule_p1 {
+    flex-direction: column;
+    align-items: start;
+    gap: 0;
+  }
+  .schedule {
+    align-items: center;
+  }
+}
 @media screen and (max-width: 650px) {
   .days {
     grid-template-columns: 1fr 1fr 1fr 1fr;
